# fuzzy-umbrella

./: man.py  mani.py  pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/magazin/: admin.py  apps.py  models.py  signals.py
backend/magazin/migrations/: migration_model.py
backend/operations/: admin.py  apps.py  models.py  signals.py  views.py
backend/operations/migrations/: 0001_initial.py  0002_alter_operation_table.py  0002_alter_xron_name.py  0003_alter_user_xron.py  0004_remove_user_xron_xron_user.py
djvenv/: pyvenv.cfg
zontik_govna/: pyproject.toml
zontik_govna/mysite/: db.sqlite3
zontik_govna/mysite/blog/: admin.py  models.py
zontik_govna/mysite/blog/migrations/: 0001_initial.py  0002_remove_post_id_alter_post_title.py  0003_post_id_alter_post_title.py
zontik_govna/mysite/mysite/: settings.py
zontik_govna/svenv/: pyvenv.cfg
