[tool.poetry]
name = "nina"
version = "0.1.0"
description = ""
authors = ["kishaolo <vasula.malafeev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
psycopg-binary = "^3.2.5"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
